--- a/agentic_workshop_setup.ipynb
+++ b/agentic_workshop_setup.ipynb
@@ -1,240 +1,244 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Getting Ready for the Agentic AI Workshop\n",
-        "\n",
-        "Welcome! Before diving into Agentic AI, let's make sure that:\n",
-        "* You're comfortable with the **Colab Notebook** environment\n",
-        "* You have access to the **OpenAI API**"
-      ],
-      "metadata": {
-        "id": "zdzzIwYUMF2P"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 📝 Notebook Environment\n",
-        "\n",
-        "A Colab notebook is composed of cells that can contain either text or executable code.\n",
-        "\n",
-        "There are three main ways to execute a cell:\n",
-        "\n",
-        "* **Manual Click**: Hover over the left side of a code cell and click the `Play` button.\n",
-        "* **Keyboard Shortcut**: Click anywhere inside a cell and press `Shift + Enter`. This runs the cell and moves your cursor to the next one.\n",
-        "* **Run All**: If you want to run the entire notebook at once, go to the top menu and select `Runtime > Run all`.\n",
-        "\n",
-        "</br>\n",
-        "\n",
-        "Try running this cell:\n"
-      ],
-      "metadata": {
-        "id": "cngRuYdAJ7sZ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Print a welcome message\n",
-        "welcome_message = \"Welcome to the Agentic AI Workshop!\"\n",
-        "print(welcome_message)"
-      ],
-      "metadata": {
-        "id": "9_031NDlLDNq",
-        "outputId": "32e61d8b-bf86-41a6-b318-071471ae73f9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Welcome to the Agentic AI Workshop!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Order matters**. All code cells in this notebook share the same Python process. This means:\n",
-        "\n",
-        "* Cells must be executed in order from top to bottom.\n",
-        "* If you skip a cell that defines a variable, any cell below it that tries to use that variable will throw an error.\n",
-        "<br/>\n",
-        "\n",
-        "This cell relies on `welcome_message` being defined in the previous cell:"
-      ],
-      "metadata": {
-        "id": "ohv2Yqv2LlBl"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(f\"The previous cell displayed a welcome message: \\n{welcome_message}\")"
-      ],
-      "metadata": {
-        "id": "1lzhxw8GVFsO",
-        "outputId": "9a2a4779-672d-4015-e069-2e59e5219f29",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The previous cell displayed a welcome message: \n",
-            "Welcome to the Agentic AI Workshop!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "During the workshop, you will be asked to replace some placeholder values with your own code.\n",
-        "\n",
-        "Try it out:"
-      ],
-      "metadata": {
-        "id": "F_AipnRuORik"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Replace YOUR_ANSWER_HERE with your name in string format\n",
-        "user_name = \"ruperty\"\n",
-        "\n",
-        "# Test your work with a customized greeting\n",
-        "print(f\"Hi, {user_name}!\")"
-      ],
-      "metadata": {
-        "id": "eWk9Ff_BOup0",
-        "outputId": "dbdb9691-88bd-49c6-f381-46147507bef4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hi, ruperty!\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "7XXCX_wJjDhI"
-      },
-      "source": [
-        "## ⚙️ OpenAI Setup\n",
-        "During the workshop, you will use OpenAI models.\n",
-        "\n",
-        "* If you already have an InterSystems-provided API key, please use it.\n",
-        "* If you don't have an API key yet, you can get one [here](https://forms.cloud.microsoft/r/EgyP9mpkNJ) (InterSystems authentication required).\n",
-        "\n",
-        "<br/>\n",
-        "\n",
-        "To use they key in this notebook, you need to set it as a Secret:\n",
-        "\n",
-        "1. Click on the 🔑 **Secrets** tab in the left panel of this Colab Notebook\n",
-        "   \n",
-        "   <img src=\"https://raw.githubusercontent.com/marta-manzin/agentic-shopping-assistant/main/images/secrets.jpg\" alt=\"You can find the Secrets tab on the left panel.\" width=\"600\">\n",
-        "\n",
-        "2. Create a new secret with the name `OPENAI_API_KEY`.\n",
-        "3. Copy and paste your API key into the `Value` input box of `OPENAI_API_KEY`.\n",
-        "4. Toggle the button on the left to allow all notebooks access to the secret.\n",
-        "\n",
-        "To test your key, make a test call to OpenAI:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "id": "eo1CR-w_jDhK",
-        "outputId": "f5a003db-1766-4e02-f902-f33a42e427cd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "LLM test: OK\n"
-          ]
-        }
-      ],
-      "source": [
-        "import os\n",
-        "import openai\n",
-        "from google.colab import userdata\n",
-        "\n",
-        "# Import OpenAI API key\n",
-        "os.environ[\"OPENAI_API_KEY\"] = userdata.get(\"OPENAI_API_KEY\")\n",
-        "\n",
-        "# Test that the LLM is set up correctly\n",
-        "client = openai.OpenAI()\n",
-        "\n",
-        "response = client.chat.completions.create(\n",
-        "    model=\"gpt-4o\",\n",
-        "    messages=[{\"role\": \"user\", \"content\": \"Say 'OK' if you can read this.\"}],\n",
-        "    max_tokens=10\n",
-        ")\n",
-        "print(f\"LLM test: {response.choices[0].message.content}\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## ✅ Congratulations! You are ready for the workshop.\n",
-        "Your homework is done. \\\n",
-        "The workshop will begin with [this notebook](https://colab.research.google.com/github/marta-manzin/agentic-shopping-assistant/blob/main/agentic_direct_orchestration.ipynb)."
-      ],
-      "metadata": {
-        "id": "dqWSwXEaXC41"
-      }
-    }
-  ],
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "agentic-shopping-assistant (3.13.7)",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.13.7"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "zdzzIwYUMF2P"
+   },
+   "source": [
+    "# Getting Ready for the Agentic AI Workshop\n",
+    "\n",
+    "Welcome! Before diving into Agentic AI, let's make sure that:\n",
+    "* You're comfortable with the **Colab Notebook** environment\n",
+    "* You have access to the **OpenAI API**"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "cngRuYdAJ7sZ"
+   },
+   "source": [
+    "## 📝 Notebook Environment\n",
+    "\n",
+    "A Colab notebook is composed of cells that can contain either text or executable code.\n",
+    "\n",
+    "There are three main ways to execute a cell:\n",
+    "\n",
+    "* **Manual Click**: Hover over the left side of a code cell and click the `Play` button.\n",
+    "* **Keyboard Shortcut**: Click anywhere inside a cell and press `Shift + Enter`. This runs the cell and moves your cursor to the next one.\n",
+    "* **Run All**: If you want to run the entire notebook at once, go to the top menu and select `Runtime > Run all`.\n",
+    "\n",
+    "</br>\n",
+    "\n",
+    "Try running this cell:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "9_031NDlLDNq",
+    "outputId": "32e61d8b-bf86-41a6-b318-071471ae73f9"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the Agentic AI Workshop!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print a welcome message\n",
+    "welcome_message = \"Welcome to the Agentic AI Workshop!\"\n",
+    "print(welcome_message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "ohv2Yqv2LlBl"
+   },
+   "source": [
+    "**Order matters**. All code cells in this notebook share the same Python process. This means:\n",
+    "\n",
+    "* Cells must be executed in order from top to bottom.\n",
+    "* If you skip a cell that defines a variable, any cell below it that tries to use that variable will throw an error.\n",
+    "<br/>\n",
+    "\n",
+    "This cell relies on `welcome_message` being defined in the previous cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "1lzhxw8GVFsO",
+    "outputId": "9a2a4779-672d-4015-e069-2e59e5219f29"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The previous cell displayed a welcome message: \n",
+      "Welcome to the Agentic AI Workshop!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"The previous cell displayed a welcome message: \\n{welcome_message}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "F_AipnRuORik"
+   },
+   "source": [
+    "During the workshop, you will be asked to replace some placeholder values with your own code.\n",
+    "\n",
+    "Try it out:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "eWk9Ff_BOup0",
+    "outputId": "dbdb9691-88bd-49c6-f381-46147507bef4"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, ruperty!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Replace YOUR_ANSWER_HERE with your name in string format\n",
+    "user_name = \"ruperty\"\n",
+    "\n",
+    "# Test your work with a customized greeting\n",
+    "print(f\"Hi, {user_name}!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "7XXCX_wJjDhI"
+   },
+   "source": [
+    "## ⚙️ OpenAI Setup\n",
+    "During the workshop, you will use OpenAI models.\n",
+    "\n",
+    "* If you already have an InterSystems-provided API key, please use it.\n",
+    "* If you don't have an API key yet, you can get one [here](https://forms.cloud.microsoft/r/EgyP9mpkNJ) (InterSystems authentication required).\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "To use they key in this notebook, you need to set it as a Secret:\n",
+    "\n",
+    "1. Click on the 🔑 **Secrets** tab in the left panel of this Colab Notebook\n",
+    "   \n",
+    "   <img src=\"https://raw.githubusercontent.com/marta-manzin/agentic-shopping-assistant/main/images/secrets.jpg\" alt=\"You can find the Secrets tab on the left panel.\" width=\"600\">\n",
+    "\n",
+    "2. Create a new secret with the name `OPENAI_API_KEY`.\n",
+    "3. Copy and paste your API key into the `Value` input box of `OPENAI_API_KEY`.\n",
+    "4. Toggle the button on the left to allow all notebooks access to the secret.\n",
+    "\n",
+    "To test your key, make a test call to OpenAI:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "eo1CR-w_jDhK",
+    "outputId": "f5a003db-1766-4e02-f902-f33a42e427cd"
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'google'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mopenai\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgoogle\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcolab\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m userdata\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Import OpenAI API key\u001b[39;00m\n\u001b[0;32m      6\u001b[0m os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPENAI_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m userdata\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPENAI_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'google'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import openai\n",
+    "from google.colab import userdata\n",
+    "\n",
+    "# Import OpenAI API key\n",
+    "os.environ[\"OPENAI_API_KEY\"] = userdata.get(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "# Test that the LLM is set up correctly\n",
+    "client = openai.OpenAI()\n",
+    "\n",
+    "response = client.chat.completions.create(\n",
+    "    model=\"gpt-4o\",\n",
+    "    messages=[{\"role\": \"user\", \"content\": \"Say 'OK' if you can read this.\"}],\n",
+    "    max_tokens=10\n",
+    ")\n",
+    "print(f\"LLM test: {response.choices[0].message.content}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "dqWSwXEaXC41"
+   },
+   "source": [
+    "## ✅ Congratulations! You are ready for the workshop.\n",
+    "Your homework is done. \\\n",
+    "The workshop will begin with [this notebook](https://colab.research.google.com/github/marta-manzin/agentic-shopping-assistant/blob/main/agentic_direct_orchestration.ipynb)."
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
